--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .option {
+    @apply cursor-pointer hover:bg-gray-100 p-2 rounded-lg transition duration-200 ease-out;
+  }
+}
